--- a/code/Heatmap.ipynb
+++ b/code/Heatmap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "c57dc979",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "bbe6a2f8",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "7eca2b6f",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "08f247aa",
    "metadata": {},
    "outputs": [],
@@ -84,10 +84,10 @@
     "    fig, axes = plt.subplots(nrows=3, ncols=3, figsize=(24, 28), constrained_layout=False)\n",
     "\n",
     "    plt.subplots_adjust(\n",
-    "        wspace=0.25,  # Increased width padding between subplots\n",
-    "        hspace=0.25,  # Increased height padding between subplots\n",
+    "        wspace=0.25,\n",
+    "        hspace=0.25,\n",
     "        left=0.04,\n",
-    "        right=0.75,   # Reduced to allocate more space for vertical colorbars\n",
+    "        right=0.75,\n",
     "        top=0.95,\n",
     "        bottom=0.25\n",
     "    )\n",
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "id": "0da3283d",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "id": "f1f67a95",
    "metadata": {},
    "outputs": [
