--- a/code/Heatmap.ipynb
+++ b/code/Heatmap.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "08f247aa",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
     "    pre_2017 = homicide_gdf[homicide_gdf['Date'] < '2017-01-13']\n",
     "    post_2017 = homicide_gdf[homicide_gdf['Date'] >= '2017-01-13']\n",
     "    \n",
-    "    buffer_distance = 400  # 1 mile in meters\n",
+    "    buffer_distance = 400\n",
     "\n",
     "    for idx, neighborhood in enumerate(selected_neighborhoods):\n",
     "        ax1, ax2, ax3 = axes[idx]\n",
